# drsedman

./: .env.template  .gitignore  .mccode_config.json  LICENSE  Makefile  README.md  pyproject.toml  setup.py
config/: settings.yaml
docs/: CONTRIBUTING.md  architecture.md
formatted_output/: Gearon2024_RulesOfRiverAvulsion_gemini_formatted.html  Zaleha - 1997 - Fluvial and lacustrine palaeoenvironments of the Miocene Siwalik Group, Khaur area, northern Pakista_gemini_formatted.html
mlx_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: chat.zsh  clean_pdfs.zsh  process_and_embed.zsh  process_pdfs_gemini.py  run_gemini_processing.zsh  update_drsedman.zsh  view_gemini.sh
src/: __init__.py
src/core/: __init__.py  gemini.py  model.py  pdf_utils.py  processor.py  vectordb.py
src/interface/: __init__.py  bot.py  chat.py
src/mlx_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tools/: __init__.py  format_gemini.py  save_gemini_html.py
tests/: conftest.py
tests/core/: test_core_integration.py  test_gemini.py  test_model.py  test_pdf_utils.py  test_processor.py  test_vectordb.py
tests/integration/: test_integration.py  test_pipeline.py
tests/interface/: test_bot.py  test_chat.py
tests/tools/: test_format_gemini.py  test_save_gemini.py
