[tool.poetry]
name = "sand-rag"
version = "0.1.0"
description = "Sedimentology-focused RAG with Dr. Sedman, powered by MLX and Gemini"
authors = ["Jake Gearon <jake.gearon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
duckdb = "^0.9.2"
transformers = "^4.36.2"
google-generativeai = "^0.3.2"
python-dotenv = "^1.0.0"
tqdm = "^4.66.1"

mlx = "^0.20.0"
reportlab = "^4.2.5"
psutil = "^6.1.0"
[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mccode = "scripts.mccode:main"
process-pdfs = "scripts.process_pdfs_gemini:main"
process-embeddings = "scripts.process_and_embed:main"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false 